--- a/src/css pages/Headernavbar.css
+++ b/src/css pages/Headernavbar.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Golos+Text&display=swap');
 *{
     margin:0;
     padding:0;
@@ -13,6 +14,7 @@
         position: relative;
         top:0%;
         transition: linear 0.5s; 
+        
     }
     .sticky{
         position: sticky;
@@ -32,8 +34,12 @@
         text-decoration: none;
         color:black;
         font-size: 1rem;
-        font-family: 'Poppins', sans-serif;
+        /*font-family: 'Poppins', sans-serif;*/
         transition: ease 0.2s;
+        font-family: 'Golos Text', sans-serif;
+
+        
+        
     }
     .navbarMenuOpt:hover{
         transform: scale(1.1);
@@ -43,9 +49,10 @@
         text-align: center;
     }
     .navbarLogo img{
-        padding-top: 0.2%;
+        padding-top: 0.5%;
         transform: translateX(-30%);
         width:20%;
+        height:90%;
     }
 
     .navbarIcon{
