--- a/src/css pages/Heromain.css
+++ b/src/css pages/Heromain.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Golos+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @media screen and (min-width: 992px) {
     .heromainBackground{
         /*background-image: url("https://www.liveabout.com/thmb/4kXHyqzQuEZiqWkDTvUCLChwy5o=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Winterstreetstylechristianvierig-5ba3a412c9e77c0050bc5f27.jpg");*/
@@ -9,6 +11,27 @@
         background-repeat: no-repeat;
         overflow: hidden;
     }
+    .heromanAbout{
+        text-align: center;
+        height:40vh;
+    }
+    .heromanAbout h1{
+        font-family: 'Dancing Script', cursive;
+        font-size: 5.5rem;
+        padding-top:8vh;
+        padding-bottom: 4vh;
+    }
+    .heromanAbout p{
+        font-size: 1.2rem;
+        font-family: 'Golos Text', sans-serif;
+        word-spacing: 2px;
+        letter-spacing: 0.5px;
+        width:60%;
+        margin:auto;
+        color:rgb(20,20,20);
+
+    }
+
     .heromainBackgroundSec{
         width:100%;
         height:80vh;
@@ -16,6 +39,7 @@
         justify-content: space-evenly;
         margin: 1vh 0;
     }
+
     .heromainBackgroundSecParts{
         width:49%;
         position: relative;
@@ -53,6 +77,7 @@
         position: relative;
         top:37%;
         font-weight: bold;
+        font-family: 'Dancing Script', cursive;
     }
 
     .heromainBackgroundThi{
@@ -81,6 +106,7 @@
         position: relative;
         top:40%;
         font-weight: bold;
+        font-family: 'Dancing Script', cursive;
     }
 
     .heromainBackgroundFor{
@@ -125,6 +151,7 @@
         position: relative;
         top:37%;
         font-weight: bold;
+        font-family: 'Dancing Script', cursive;
     }
     
 }
