--- a/src/css pages/Headernavbar.css
+++ b/src/css pages/Headernavbar.css
@@ -23,7 +23,7 @@
         /*border-bottom: 1px black solid;*/
     }
     .navbarMenu{
-        width:25%;
+        width:30%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -33,25 +33,22 @@
     .navbarMenuOpt{
         text-decoration: none;
         color:black;
-        font-size: 1rem;
-        /*font-family: 'Poppins', sans-serif;*/
+        font-size: 2.3vmin;
+        font-family: 'Poppins', sans-serif;
         transition: ease 0.2s;
-        font-family: 'Golos Text', sans-serif;
-
-        
-        
+        font-family: 'Golos Text', sans-serif;  
     }
     .navbarMenuOpt:hover{
         transform: scale(1.1);
     }
     .navbarLogo{
-        width: 60%;
+        width: 55%;
         text-align: center;
     }
     .navbarLogo img{
         padding-top: 0.7%;
         transform: translateX(-30%);
-        width:25%;
+        width:30%;
         height:85%;
     }
 
@@ -62,35 +59,39 @@
         justify-content: space-around;
         align-items: center;
         transform: translateX(5%);
+        /* background-color: blue; */
     }
     .navbarIcons{
-        font-size: 1.6rem;
-        padding:10%;
+        font-size: 3vmin;
+        margin-right: 1.5vw;
         cursor:pointer;
     }
     .navbarLoginActiveButs{
         transform: translateY(-10%);
-        height:50%;
-        
+        height:50%;   
     }
     .navbarLoginButs{
-        width:200%;
-        height:7.5vh;
-        padding-top:10%;
+        width:13vw;
+        height:9vh;
         display:flex;
         flex-direction: column;
         background-color: white;
-        transform: translate(-90%,40%);
+        transform: translate(-11.5vw,10vh);
         transition: linear 0.3s;  
         visibility: hidden;
         cursor:pointer;
+        padding-top: 1vh;
         
     }
     .navbarLoginActiveButs:hover .navbarLoginButs{
-        transform: translate(-90%,-10%);
+        transform: translate(-11.5vw,2vh);
         visibility: visible;
     }
-    
+    .navbarIconsPers{
+        /* color:white; */
+        transform: translate(0,0.9vh);
+
+    }
     .navbarLoginButsName{
         cursor:pointer;
     }
@@ -100,17 +101,17 @@
         color:black;
         background-color: transparent;
         border: none;
-        font-size: 1rem;
+        font-size: 2.5vmin;
         cursor:pointer;
     }
     .navbarLoginButs button{
         background-color: transparent;
         border: none;
-        font-size: 1rem;
+        font-size: 2.5vmin;
         
     }
     .navbarLoginButsIcons{
-        font-size: 1.2rem;
+        font-size: 2.5vmin;
         padding-left: 10%;
         padding-right: 2%;
         transform: translateY(30%);
