--- a/src/css pages/Heromain.css
+++ b/src/css pages/Heromain.css
@@ -13,16 +13,16 @@
     }
     .heromanAbout{
         text-align: center;
-        height:40vh;
+        height:35vh;
     }
     .heromanAbout h1{
         font-family: 'Dancing Script', cursive;
-        font-size: 5.5rem;
-        padding-top:8vh;
-        padding-bottom: 4vh;
+        font-size: 10vh;
+        padding-top:4vh;
+        padding-bottom: 3vh;
     }
     .heromanAbout p{
-        font-size: 1.2rem;
+        font-size: 2.5vh;
         font-family: 'Golos Text', sans-serif;
         word-spacing: 2px;
         letter-spacing: 0.5px;
