--- a/src/css pages/Login.css
+++ b/src/css pages/Login.css
@@ -7,42 +7,44 @@
         height:100vh;
         width:100vw;
     }
+
     .logfrm{
         background-color: rgba(0,0,0,0.5);
-        width:30%;
-        height:65%;
+        width:30vw;
+        height:65vh;
         text-align: center;
         margin:auto;
-        margin-top:10%;
-        border-radius: 1%;
-        
+        margin-top:17vh;
+        border-radius: 1vmin; 
     }
     .logfrm h2{
         color:white;
         text-align: center;
         padding-top:14%;
         margin-bottom:10%;
-        font-size:2rem;
+        font-size:5vmin;
     }
     .loginCreds{
         border-bottom:1.5px solid #FFFFFF;
         width:70%;
         margin:auto;
-        height:7%;
+        height:5vh;
         text-align: left;
         margin-bottom: 6%;
         color:white;
     }
     .loginCredsIcons{
+        font-size: 2.5vmin;
         transform: translateY(20%);
     }
     .logfrm input{
         color:white;
-        padding-left: 4%;
         border:none;
         outline: none;
         background-color: transparent;
-        font-size: 1rem;
+        font-size: 2.5vh;
+        width: 85%;
+        padding-left: 5%;
     }
     .logfrm input::placeholder {
         color:#bbbbbb;
@@ -51,17 +53,17 @@
         background-color: transparent;
         border:1px solid white;
         color:white;
-        height:2.7rem;
+        height:5vh;
         width:70%;
-        font-size:1.2rem;
+        font-size:2.5vh;
         font-weight: bold;
         margin-bottom: 2%;
 
     }
     .frgtps{
         color:#dedede;
-        font-size:0.9em;
-        margin-right: 45%;
+        font-size:1.8vh;
+        margin-right: 41%;
     }
     .frgtps:hover{
         color:blue;
@@ -69,6 +71,7 @@
     .logToReg{
         color:#dedede;
         line-height: 10vh;
+        font-size: 2.2vh;
         
     }
     .logToReg:hover{
@@ -167,7 +170,7 @@
     box-shadow:6px 5px 15px #000000;
 }
 .logfrm p{
-    font-size:1em;
+    font-size:2vh;
     color:red;
     width:100%;
     margin-top:5%;
