--- a/src/css pages/Review.css
+++ b/src/css pages/Review.css
@@ -1,33 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 .review{
-    height:65vh;
+    height:68vh;
     background-color: rgb(238,238,238);
     text-align: center;
 }
 .review h1{
     font-family: 'Dancing Script', cursive;
-    font-size: 4rem;
-    padding-top: 5vh;
-    margin-bottom: 2vh;
+    font-size: 10vh;
+    padding-top: 3vh;
 }
 .review p{
     width:80%;
     margin: auto;
-    margin-bottom: 4vh;
+    font-size: 2.5vh;
+    margin-bottom: 3vh;
 }
+
 .reviewCardBar{
     display:flex;
     flex-direction: row;
-    /* overflow-x: auto;
-    white-space: nowrap; */
-    margin-left: 8vw;
+    justify-content: space-between;
+    /* background-color: blue; */
+    height:47%;
+    width:90%;
+    margin:auto;
 }
 .reviewCard{
     background-color: white;
-    border-radius:10px;
-    width:25vw;
-    height:34vh;
-    margin-right:3vw;
+    border-radius:1vh;
+    width:30%;
+    height:100%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     text-align: center;
     border: 1px solid black;
@@ -35,17 +37,14 @@
 
 .reviewCard img{
     height:30%;
-    width:22%;
+    width:27%;
     margin-top:4vh;
     margin-bottom: 2vh;
     border-radius:50%;
 }
 .reviewCard h3{
-    margin-bottom: 1.5vh;
+    font-size: 3vh;
 }
 .reviewCard p{
-    
-    margin-left:1.5rem;
-    margin-top:-0.5rem;
-    margin-bottom: 1.5rem;
+    font-size: 2.5vh;
 }
