--- a/src/css pages/Headernavbar.css
+++ b/src/css pages/Headernavbar.css
@@ -13,9 +13,7 @@
         flex-direction: row;
         position: relative;
         top:0%;
-        transition: linear 0.5s; 
-        
-        
+        transition: linear 0.5s;   
     }
     .sticky{
         position: sticky;
@@ -122,6 +120,133 @@
         width:1.5%;
         visibility: hidden;
     }
+    
+    .navMenuSlideIn{
+    }
+    .loginMenuSlideIn{
+
+    }
 }
-@media screen and (min-width: 991px) {
+@media screen and (max-width: 991px) {
+    .headnavbar{
+        background-color: white;
+        width: 100%;
+        height:9vh;
+        z-index:100;
+        display:flex;
+        flex-direction: row;
+        position: relative;
+        top:0%;
+        transition: linear 0.5s;   
+    }
+    .sticky{
+        position: sticky;
+        top:0%;   
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+    .navbarMenu{
+        display:flex;
+        flex-direction: column;
+        text-align: center;
+        background-color: white;
+        border: 1px solid black;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        width:50vw;
+        height:18vh;
+        border-radius: 1vmin;
+        padding-top: 3vh;
+        position:fixed;
+        transform: translate(25vw,-25vh);
+        transition:linear 0.3s;
+    }
+    .navbarMenuOpt{
+        text-decoration: none;
+        color:black;
+        font-size: 5.5vmin;
+        font-family: 'Poppins', sans-serif;
+        transition: ease 0.2s;
+        font-family: 'Golos Text', sans-serif;
+        margin-bottom: 1vh;  
+    }
+    .navMenuSlideIn{
+        transform: translate(25vw,25vh);
+    }
+    .navbarLogo{
+        width: 55%;
+    }
+    .navbarLogo img{
+        padding-top: 2.5%;
+        padding-left: 5%;
+        width:90%;
+        height:85%;
+    }
+    .navbarIcon{
+        width:35%;
+        /* background-color: red; */
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        padding-left: 5%;
+        /* transform: translateX(5%); */
+    }
+    .navbarIcons{
+        font-size: 6vmin;
+        margin-right: 1.5vw;
+        cursor:pointer;
+    }
+    .navbarLoginActiveButs{
+        /* transform: translateY(-5%); */
+        height:50%;   
+    }
+    .navbarLoginButs{
+        width:25vw;
+        height:9vh;
+        display:flex;
+        flex-direction: column;
+        transform: translate(0,-16vh);
+        transition: linear 0.3s;  
+        cursor:pointer;
+        padding-top: 1vh;
+        background-color: white;
+        border: 1px solid black;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        color:black;
+        text-decoration: none;
+        font-size: 5vmin;
+    }
+    .navbarLoginButsLink{
+        text-decoration: none;
+        color:black;
+        background-color: transparent;
+        border: none;
+        cursor:pointer;
+    }
+    .navbarLoginButsIcons{
+        padding-left: 10%;
+        padding-right: 1%;
+        transform: translateY(30%);
+    }
+    .navbarLoginButs button{
+        background-color: transparent;
+        border: none;
+    }
+    .loginMenuSlideIn{
+        transform: translate(0,2vh);
+    }
+    .navbarIconsPers{
+        transform: translate(0,0.6vh);
+    }
+    .navbarLoginButsName{
+        cursor:pointer;
+    }
+    .navbarToggleButton{
+        width:5%;
+    }
+    .navbarIconsBars{
+        font-size: 5vmin;
+        transform: translate(-9vw,3vh);
+
+    }
+
 }
